[tool.poetry]
name = "repl_nix_Python-Discord-Bot-Template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.19.0"
discord = "^2.3.1"
aiohttp = "^3.8.5"
Flask = "^2.3.2"
bs4 = "^0.0.1"
requests = "^2.31.0"
update = "^0.0.1"
pytz = "^2023.3"
openpyxl = "^3.1.2"
mysql-connector-python = "^8.1.0"
spacy = "^3.7.1"
Pillow = "^10.0.1"
sympy = "^1.12"
psutil = "^5.9.5"
django-timezone = "^0.3"
fuzzywuzzy = "^0.18.0"
Santos = "^1.0.1"
selenium = "4.16.0"
"discord.py" = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
